# benchmarkCppStream

./: .gitignore  CMakeLists.txt  README.md  benchmarkcfile  benchmarkcfile_zlib  benchmarkofstream  benchmarkofstream_zlib  noBenchmark  run-benchmark.sh
demo/: gulpfile.js  package-lock.json  package.json
demo/app/: index.html
demo/app/res/: benchmark_ofstream.json  benchmark_ofstream_zlib.json
demo/app/scripts/: builder-chart.js  daolocalfile.js  main.js
doc/: index.html
doc/scripts/: daolocalfile.js.map  main.js  main.js.map
docs/res/: demo-conf.json
docs/scripts/: builder-chart.js  builder-chart.js.map  daolocalfile.js
docs/styles/: main.css
res/result/: benchmark_cfile.json  benchmark_cfile_zlib.json  i5-6300U@4x_3GH_gcc7.4.0.json
src/: benchmark.cpp  benchmark_cfile.cpp  benchmark_cfile_zlib.cpp  benchmark_ofstream.cpp  benchmark_ofstream_zlib.cpp  main.cpp  zlibutil.cpp  zlibutil.hpp
